--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,8 @@
     "paper-radio-button": "^1.0.0",
     "paper-radio-group": "^1.0.0",
     "paper-toggle-button": "^1.0.0",
-    "paper-tooltip": "^1.0.0"
+    "paper-tooltip": "^1.0.0",
+    "polymer-sortablejs": "^0.1.3"
   },
   "devDependencies": {
     "web-component-tester": "*",
