--- a/bower.json
+++ b/bower.json
@@ -41,9 +41,15 @@
     "polymer-sortablejs": "^0.1.3"
   },
   "devDependencies": {
-    "web-component-tester": "*",
     "test-fixture": "PolymerElements/test-fixture#^1.0.0",
-    "fakerest": "~1.1.4"
+    "fakerest": "~1.1.4",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "web-component-tester": "^4.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
+    "iron-test-helpers": "^1.4.1",
+    "oe-utils":"^1.0.0",
+    "oe-data-table": "^1.0.0"
   },
   "resolutions": {
     "test-fixture": "^3.0.0",
